src/assets/css/navbar.css
body {
  background-color: #22223b;
  overflow: hidden;
  
}
.navbar-display{
  display: flex;
  align-items: center;
  
}
.hamburger{
  width:20px;
  margin-right: 15px;
  cursor: pointer;
  
}
#logo-resize{
  width: 40px;
  height: 20px;
  
}
/*phone*/
@media only screen and (min-width: 0px) and (max-width: 600px) {
  .navigation-links {
    display: none;
  }
  .navbar-display {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
  }
  #menu__toggle {
    opacity: 0;
  }
  #menu__toggle:checked + .menu__btn > span {
    transform: rotate(45deg);
  }
  #menu__toggle:checked + .menu__btn > span::before {
    top: 0;
    transform: rotate(0deg);
  }
  #menu__toggle:checked + .menu__btn > span::after {
    top: 0;
    transform: rotate(90deg);
  }
  #menu__toggle:checked ~ .menu__box {
    left: 0 !important;
  }
  .menu__btn {
    position: absolute;
    top: 22px;
    right: 20px;
    width: 23px;
    cursor: pointer;
    z-index: 1;
    right: 20px;
  }
  .menu__btn > span,
  .menu__btn > span::before,
  .menu__btn > span::after {
    display: block;
    position: absolute;
    width: 100%;
    height: 2px;
    background-color: #eae2e2;
    transition-duration: 0.25s;
  }
  .menu__btn > span::before {
    content: "";
    top: -8px;
  }
  .menu__btn > span::after {
    content: "";
    top: 8px;
  }
  .menu__box {
    display: block !important;
    position: fixed;
    top: 0;
    left: -100%;
    width: 300px;
    height: 100%;
    padding: 80px 0;
    background-color: #828282;
    transition-duration: 0.25s;
  }
  .menu__item {
    display: block;
    padding: 12px 24px;
    color: rgb(255, 255, 255);
    font-size: 20px;
    font-weight: 600;
    text-decoration: none;
    transition-duration: 0.25s;
  }
  .menu__item:hover,
  .menu__item a {
    background-color: #cfd8dc;
    color: #151e24;
  }
}
/*tablet*/
@media only screen and (min-width: 600px) and (max-width: 1450px) {
  .hamburger {
    display: none;
  }
  .navbar-display {
    display: flex;
    justify-content: space-around;
    margin-top: 13px;
  }
  .nav {
    display: flex;
    align-items: center;
  }
  .navigation-links {
    display: flex;
    font-size: 17px;
    font-weight: bold;
    letter-spacing: 0px;
  }
  .navigation-links a {
    margin: 0px 7px;
  }
}

/*pc*/
@media only screen and (min-width: 1450px) {
  .hamburger {
    display: none;
    
  }
  .navbar-display {
    display: flex;
    justify-content: space-around;
    margin-top: 13px;
  }
  .nav {
    display: flex;
    align-items: center;
  }
  .navigation-links {
    display: flex;
    font-size: 17px;
    font-weight: bold;
    letter-spacing: 0px;
  }
  .navigation-links a {
    margin: 0px 7px;
  }
}

